--- a/admin/login.html
+++ b/admin/login.html
@@ -2,42 +2,109 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>大事件-后台登录页</title>
-  <link rel="stylesheet" type="text/css" href="css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
-  <link rel="stylesheet" type="text/css" href="css/main.css" />
-  <!-- 引入bootstrap的css文件 -->
-  <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css" />
-  <!-- 引入jq文件 -->
-  <script src="./libs/jquery-1.12.4.min.js"></script>
-  <!-- 引入bootstrap的js文件 -->
-  <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>大事件-后台登录页</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <!-- 引入bootstrap的css文件 -->
+    <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css" />
+    <!-- 引入jq文件 -->
+    <script src="./libs/jquery-1.12.4.min.js"></script>
+    <!-- 引入bootstrap的js文件 -->
+    <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-  <div class="main_wrap">
-    <div class="header">
-      <a href="#" class="logo"><img src="images/logo.png" alt="" /></a>
-      <div class="copyright">
-        CopyRight © 2019 深圳百秀信息技术股份有限公司<br />All Rights Reserved
-      </div>
-    </div>
+    <div class="main_wrap">
+        <div class="header">
+            <a href="#" class="logo"><img src="images/logo.png" alt="" /></a>
+            <div class="copyright">
+                CopyRight © 2019 深圳百秀信息技术股份有限公司<br />All Rights Reserved
+            </div>
+        </div>
 
-    <div class="login_form_con">
-      <div class="login_title"></div>
-      <form class="login_form">
-        <i class="iconfont icon-user"></i>
-        <i class="iconfont icon-key"></i>
-        <input type="text" class="input_txt" placeholder="邮箱/手机号" />
-        <input type="password" class="input_pass" placeholder="密码" />
-        <input type="submit" class="input_sub" value="登 录" />
-      </form>
+        <div class="login_form_con">
+            <div class="login_title"></div>
+            <form class="login_form">
+                <i class="iconfont icon-user"></i>
+                <i class="iconfont icon-key"></i>
+                <input type="text" class="input_txt" placeholder="邮箱/手机号" />
+                <input type="password" class="input_pass" placeholder="密码" />
+                <input type="submit" class="input_sub" value="登 录" />
+            </form>
+        </div>
     </div>
-  </div>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">温馨提示：</h4>
+                </div>
+                <div class="modal-body">
+                    <p>One fine body&hellip;</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">确认</button>
+                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
 
+
+    <script>
+        // 思路
+        // 登录页面 
+        // 1. 给登录按钮注册点击事件
+        // 2. 清除form表单按钮默认提交行为
+        // 3. 获取输入框内容
+        // 4. 非空判断
+        // 5. 发送ajax请求完成登录
+        // 6. 登录成功提示并跳转到首页
+
+        // 1. 给登录按钮注册点击事件
+        $('.input_sub').on('click', function(e) {
+            // 2. 清除form表单按钮默认提交行为
+            e.preventDefault();
+            // 3. 获取输入框内容
+            var username = $('.input_txt').val().trim();
+            var password = $('.input_pass').val().trim();
+            // 4. 非空判断  
+            if (username == '' || password == '') {
+                // 使用bootstrap 模态框提示
+                $('#myModal').modal();
+                $('.modal-body').text('账号或者密码不能为空！')
+                return;
+            };
+            // 5. 发送ajax请求完成登录
+            $.ajax({
+                type: 'post',
+                url: 'http://localhost:8080/api/v1/admin/user/login',
+                data: {
+                    username: username,
+                    password: password
+                },
+                success: function(backData) {
+                    // 使用bootstrap模态框提示
+                    $('#myModal').modal();
+                    $('.modal-body').text(backData.msg);
+                    if (backData.code == 200) {
+                        $('#myModal').on('hidden.bs.modal', function(e) {
+                            // 6. 登录成功提示并跳转到首页
+                            window.location.href = './index.html'
+                        })
+                    };
+                }
+            })
+        })
+    </script>
 </body>
 
 </html>
