--- a/admin/index.html
+++ b/admin/index.html
@@ -54,5 +54,42 @@
 
         </div>
     </div>
+
+    <script>
+        // 页面记载 发送ajax请求显示个人信息
+        $(function() {
+            // // 1. 原先ajax发送get请求
+            // //(1).实例化ajax对象
+            // var xhr = new XMLHttpRequest();
+            // //(2).设置请求方法和地址
+            // //get请求的数据直接添加在url的后面 格式是 url?key=value
+            // xhr.open('get', 'http://localhost:8080/api/v1/admin/user/info');
+            // // headers
+            // xhr.setRequestHeader('Authorization', localStorage.getItem('token'));
+            // //(3).发送请求
+            // xhr.send();
+            // //(4).注册回调函数
+            // xhr.onload = function() {
+            //     console.log(xhr.responseText)
+            // };
+            //  2. 使用jQuer发送ajax请求
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/admin/user/info',
+                type: 'get',
+                headers: {
+                    Authorization: localStorage.getItem('token')
+                },
+                success: function(backData) {
+                    console.log(backData);
+                    if (backData.code == 200) {
+                        $('.user_info>span>i').text(backData.data.nickname);
+                        $('.user_info>img').attr('src', backData.data.userPic);
+                        $('.user_center_link>img').attr('src', backData.data.userPic)
+                    }
+                }
+            });
+        })
+    </script>
 </body>
+
 </html>
