--- a/admin/login.html
+++ b/admin/login.html
@@ -60,48 +60,50 @@
 
 
     <script>
-        // 思路
-        // 登录页面 
-        // 1. 给登录按钮注册点击事件
-        // 2. 清除form表单按钮默认提交行为
-        // 3. 获取输入框内容
-        // 4. 非空判断
-        // 5. 发送ajax请求完成登录
-        // 6. 登录成功提示并跳转到首页
-
-        // 1. 给登录按钮注册点击事件
-        $('.input_sub').on('click', function(e) {
+        $(function() {
+            // 思路
+            // 登录页面 
+            // 1. 给登录按钮注册点击事件
             // 2. 清除form表单按钮默认提交行为
-            e.preventDefault();
             // 3. 获取输入框内容
-            var username = $('.input_txt').val().trim();
-            var password = $('.input_pass').val().trim();
-            // 4. 非空判断  
-            if (username == '' || password == '') {
-                // 使用bootstrap 模态框提示
-                $('#myModal').modal();
-                $('.modal-body').text('账号或者密码不能为空！')
-                return;
-            };
+            // 4. 非空判断
             // 5. 发送ajax请求完成登录
-            $.ajax({
-                type: 'post',
-                url: 'http://localhost:8080/api/v1/admin/user/login',
-                data: {
-                    username: username,
-                    password: password
-                },
-                success: function(backData) {
-                    // 使用bootstrap模态框提示
+            // 6. 登录成功提示并跳转到首页
+
+            // 1. 给登录按钮注册点击事件
+            $('.input_sub').on('click', function(e) {
+                // 2. 清除form表单按钮默认提交行为
+                e.preventDefault();
+                // 3. 获取输入框内容
+                var username = $('.input_txt').val().trim();
+                var password = $('.input_pass').val().trim();
+                // 4. 非空判断  
+                if (username == '' || password == '') {
+                    // 使用bootstrap 模态框提示
                     $('#myModal').modal();
-                    $('.modal-body').text(backData.msg);
-                    if (backData.code == 200) {
-                        $('#myModal').on('hidden.bs.modal', function(e) {
-                            // 6. 登录成功提示并跳转到首页
-                            window.location.href = './index.html'
-                        })
-                    };
-                }
+                    $('.modal-body').text('账号或者密码不能为空！')
+                    return;
+                };
+                // 5. 发送ajax请求完成登录
+                $.ajax({
+                    type: 'post',
+                    url: 'http://localhost:8080/api/v1/admin/user/login',
+                    data: {
+                        username: username,
+                        password: password
+                    },
+                    success: function(backData) {
+                        // 使用bootstrap模态框提示
+                        $('#myModal').modal();
+                        $('.modal-body').text(backData.msg);
+                        if (backData.code == 200) {
+                            $('#myModal').on('hidden.bs.modal', function(e) {
+                                // 6. 登录成功提示并跳转到首页
+                                window.location.href = './index.html'
+                            })
+                        };
+                    }
+                })
             })
         })
     </script>
