--- a/admin/index.html
+++ b/admin/index.html
@@ -54,7 +54,7 @@
 
         </div>
     </div>
-
+    <script src="./libs/http.js"></script>
     <script>
         // 页面记载 发送ajax请求显示个人信息
         $(function() {
@@ -74,7 +74,8 @@
             // };
             //  2. 使用jQuer发送ajax请求
             $.ajax({
-                url: 'http://localhost:8080/api/v1/admin/user/info',
+                // url: 'http://localhost:8080/api/v1/admin/user/info',
+                url: BigNew.user_info,
                 type: 'get',
                 // headers: {
                 //     Authorization: localStorage.getItem('token')
