--- a/admin/login.html
+++ b/admin/login.html
@@ -58,7 +58,7 @@
     </div>
     <!-- /.modal -->
 
-
+    <script src="./libs/http.js"></script>
     <script>
         $(function() {
             // 思路
@@ -87,7 +87,8 @@
                 // 5. 发送ajax请求完成登录
                 $.ajax({
                     type: 'post',
-                    url: 'http://localhost:8080/api/v1/admin/user/login',
+                    // url: 'http://localhost:8080/api/v1/admin/user/login',
+                    url: BigNew.user_login,
                     data: {
                         username: username,
                         password: password
