--- a/admin/index.html
+++ b/admin/index.html
@@ -85,7 +85,7 @@
                 success: function(backData) {
                     console.log(backData);
                     if (backData.code == 200) {
-                        $('.user_info span').html('欢迎&nbsp&nbsp&nbsp&nbsp' + backData.data.nickname);
+                        $('.user_info span').html('欢迎：&nbsp&nbsp' + backData.data.nickname);
                         $('.user_info>img').attr('src', backData.data.userPic);
                         $('.user_center_link>img').attr('src', backData.data.userPic)
                     }
